--- a/.github/workflows/dev-pull.yml
+++ b/.github/workflows/dev-pull.yml
@@ -25,6 +25,12 @@ jobs:
       VAULT_SECRET_ID: "test-secret-id"
       
       JWT_SECRET: test-secret
+
+      PADO_RABBITMQ_HOST: 127.0.0.1
+      RABBITMQ_USERNAME: test
+      RABBITMQ_PASSWORD: testpw
+      RABBITMQ_VHOST: "/"   # spring.rabbitmq.virtual-host 설정에 매핑됨
+      
     services:
       mysql:
         image: mysql:8.0
@@ -69,6 +75,19 @@ jobs:
           --cap-add=IPC_LOCK
           --health-cmd="wget -qO- http://127.0.0.1:8200/v1/sys/health || exit 1"
           --health-interval=10s --health-timeout=5s --health-retries=20
+
+      rabbitmq:
+        image: rabbitmq:3.13-management
+        ports:
+          - "5672:5672"   # AMQP
+          - "15672:15672" # 관리 콘솔
+        env:
+          RABBITMQ_DEFAULT_USER: test
+          RABBITMQ_DEFAULT_PASS: testpw
+          RABBITMQ_DEFAULT_VHOST: "/"
+        options: >-
+          --health-cmd="rabbitmq-diagnostics -q ping"
+          --health-interval=10s --health-timeout=5s --health-retries=10
     steps:
     - name: Checkout Source
       uses: actions/checkout@v4
@@ -100,6 +119,10 @@ jobs:
         # Vault
         for i in {1..30}; do
           curl -s $VAULT_URI/v1/sys/health >/dev/null && echo "Vault up" && break || sleep 2
+        done
+        # RabbitMQ
+        for i in {1..30}; do
+          nc -z 127.0.0.1 5672 && echo "RabbitMQ up" && break || sleep 2
         done
     
     - name: Setup Vault App-Role for CI
