--- a/api-server/build.gradle
+++ b/api-server/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 	implementation "org.springframework.boot:spring-boot-starter-data-mongodb"
     implementation "org.springframework.boot:spring-boot-starter-data-jpa"
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	implementation 'org.springframework.boot:spring-boot-starter-amqp'
+
 
 	// JWT 라이브러리
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
